[package]
name = "nforwardauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
http-body-util = "0.1.0-rc.2" 
serde_json = "1.0"
bytes = "1"
rand = "0.8.4"
jwt = "0.16.0"
cookie = "0.17"
sha2 = "0.10.6"
hmac = "0.12.1"
once_cell = "1.17.1"
mime_guess = "2.0.4"
pwhash = "1.0.0"
regex = "1.7.1"
